--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 <body>
 
 	<div id="d_1">
-		<a href="http://localhost:8089/Demo/index">点击进入网站...</a>
+		<a href="/Demo/gradeTableServlet">点击进入网站...</a>
 	</div>
 	
 </body>
